# blog-code

./: README.md
2026-ctx-engineering/: .env.example  .gitignore  README.md  pyproject.toml
2026-ctx-engineering/apps/target_app/: __init__.py  utils.py
2026-ctx-engineering/apps/target_app_bugged/: cli.py  formatter.py  main.py  manager.py  models.py  storage.py
2026-ctx-engineering/apps/target_app_large/: cli.py  pricing.py  scheduler.py  search.py  storage.py
2026-ctx-engineering/apps/target_app_large_bugged/: audit.py  exporter.py  manager.py  models.py  notifier.py  permissions.py  processor.py  reports.py  validator.py
2026-ctx-engineering/src/: agent_traditional.py  benchmark.py  benchmark_large.py  compactor.py  config.py  console_logger.py  init_snapshot.py  init_snapshot_large.py  llm.py  logger.py  manual_reset.py  manual_reset_large.py  planner.py  reset.py  reset_large.py  router.py  run_context.py  run_context_large.py  run_traditional.py  run_traditional_large.py  summarizer.py  tools.py
2026-ctx-engineering/src/subagents/: __init__.py  analyzer.py  executor.py  researcher.py  task_planner.py  tester.py
2026-ctx-engineering/tests/integration/: __init__.py  test_context_isolation.py
2026-ctx-engineering/tests/unit/: __init__.py  test_compactor.py  test_config.py  test_logger.py  test_router.py  (+1 more)
agent-mem0/: .env.example  .gitignore  README.md  pyproject.toml  pyrightconfig.json
agent-mem0/src/: agent.py  chat.py  config.py  llm.py  main.py  memory.py
agent-mem0/tests/: test_agent.py  test_chat.py  test_config.py  test_llm.py  test_memory.py
(+8 files in other folders)
